--- a/embed/index.html
+++ b/embed/index.html
@@ -30,6 +30,19 @@ html, body {
 <body>
   <!-- BEGIN Timeline Embed -->
   <div id="timeline-embed"></div>
+      <!-- 1 -->
+      <link title="timeline-styles" rel="stylesheet" href="https://cdn.knightlab.com/libs/timeline3/latest/css/timeline.css">
+
+      <!-- 2 -->
+      <script src="https://cdn.knightlab.com/libs/timeline3/latest/js/timeline.js"></script>
+
+      <div id='timeline-embed' style="width: 100%; height: 600px"></div>
+
+      <!-- 3 -->
+      <script type="text/javascript">.
+        timeline = new TL.Timeline('timeline-embed',
+          'https://docs.google.com/spreadsheets/d/1cWqQBZCkX9GpzFtxCWHoqFXCHg-ylTVUWlnrdYMzKUI/pubhtml');
+      </script>
   <!-- Override -->
   <script type="text/javascript">
     var lang = window.location.href.match(/&lang=([a-zA-Z]*)&?/);
