--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <!-- 1 -->
-      <link title="timeline-styles" rel="stylesheet" href="https://cdn.knightlab.com/libs/timeline3/latest/css/timeline.css">
+      <link title="timeline-styles" rel="stylesheet" href="css/timeline.css">
 
       <!-- 2 -->
-      <script src="https://cdn.knightlab.com/libs/timeline3/latest/js/timeline.js"></script>
+      <script src="js/timeline.js"></script>
 
       <div id='timeline-embed' style="width: 100%; height: 600px"></div>
 
